--- a/components/date-picker/style/token.less
+++ b/components/date-picker/style/token.less
@@ -51,3 +51,6 @@
 // radius
 @date-input-border-radius: var(~'@{date-picker-custom-prefix}-input-radius-border', @radius-border);
 @date-panel-border-radius: var(~'@{date-picker-custom-prefix}-panel-radius-border', @radius-border);
+
+// z-index
+@date-panel-z-index: var(~'@{date-picker-custom-prefix}-panel-z-index', @z-index-popper);
